css/style.css
/* ... */
body {
  font-family: "Poppins", sans-serif;
  background-color: white;
}


/* RBOOT */

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
}

/* Bootstrap overload */
.btn-primary {
  /* border: none; */
  background-color: var(--color-blue);
}

.btn-primary:hover,
.btn-outline-primary:hover {
  border-color: var(--color-blue);
  background-color: var(--color-blue);
}

/* Header */
.navbar-light .navbar-nav .active>.nav-link {
  color: var(--color-blue);
  /* font-weight: 500; */
}

.navbar-light .navbar-nav .nav-item .nav-link {
  transition: all ease-in-out 200ms;
  -webkit-transition: all ease-in-out 200ms;
  -moz-transition: all ease-in-out 200ms;
  -ms-transition: all ease-in-out 200ms;
  -o-transition: all ease-in-out 200ms;
}

.navbar-light .navbar-nav .nav-item:hover .nav-link {
  color: var(--color-blue);
}

/* Sections Global Styles */
section {
  padding: 3rem 0;
}

.section-header h1 {
  color: var(--color-blue);
  margin: 0;
}

.section-header p {
  margin: 0;
}

.section-header img {
  max-width: 100px;
}

/* Section - hero */
.hero {
  height: 100vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.hero .logo {
  text-align: center;
  color: var(--color-black);
}

.hero .logo img {
  width: 300px;
}

/* Section - Events */

.events-slider-bg {
  position: relative;
}

.events-slider-bg:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 35%;
  height: 100%;
  background: var(--color-blue);
  z-index: -1;
}

.events-slider-bg .events-slider {
  padding: 40px 0;
}

.events-slider-controls .slider-nav {
  margin-bottom: 150px;
}

.events-slider-controls .slider-nav .slick-arrow {
  border: 3px solid #ffffff4d;
  display: block;
  color: #ffffff;
}

.events-slider-controls .slider-nav .slick-arrow:hover,
.events-slider-controls .slider-nav .slick-arrow:active,
.events-slider-controls .slider-nav .slick-arrow:focus {
  border: 3px solid #fff;
  color: #fff;
}

.events-slider-controls .slider-nav .slick-prev {
  margin-bottom: 30px;
}

.e-list-progress {
  display: block;
  width: 100%;
  height: 3px;
  border-radius: 10px;
  overflow: hidden;
  background-color: #ffffff4d;
  background-image: -o-linear-gradient(left, #fff, #fff);
  background-image: -webkit-gradient(linear,
      left top,
      right top,
      from(#fff),
      to(#fff));
  background-image: linear-gradient(to right, #fff, #fff);
  background-repeat: no-repeat;
  background-size: 0 100%;
  -webkit-transition: background-size 0.4s ease-in-out;
  -o-transition: background-size 0.4s ease-in-out;
  transition: background-size 0.4s ease-in-out;
}

.tp-slider-extra {
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.tp-slider-extra .first {
  font-size: 50px;
  font-weight: 600;
  color: white;
  height: 65px;
  width: 65px;
  display: inline-block;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  text-align: center;
}

.tp-slider-extra .devider {
  font-size: 50px;
  color: #ffffff;
}

.tp-slider-extra .last {
  font-size: 24px;
  font-weight: 500;
  color: white;
}

.tps-arrow-left-right .slick-prev {
  position: absolute;
  left: -60px;
  top: 50%;
  margin-top: -30px;
}

.tps-arrow-left-right .slick-next {
  position: absolute;
  right: -60px;
  top: 50%;
  margin-top: -30px;
}

.tps-arrow-center {
  margin-bottom: 80px;
}

.tps-arrow-center .slick-prev {
  position: absolute;
  left: 50%;
  bottom: -80px;
  margin-left: -70px;
}

.tps-arrow-center .slick-next {
  position: absolute;
  right: 50%;
  margin-right: -70px;
  bottom: -80px;
}

.tp-control-nav .slick-arrow {
  border: 3px solid #f8f8f8;
  height: 56px;
  width: 56px;
  border-radius: 50%;
  display: inline-block;
  font-size: 35px;
  line-height: 54px;
  text-align: center;
  cursor: pointer;
  color: #f8f8f8;
  -webkit-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.events .events-slider-item {
  position: relative;
  margin: 0 0.5rem;
  box-shadow: var(--events-box-shadow);
  -moz-box-shadow: var(--events-box-shadow);
  -webkit-box-shadow: var(--events-box-shadow);
  -khtml-box-shadow: var(--events-box-shadow);
}

.events .card {
  position: relative;

  border: none;
}

.events .card .card-text {
  font-size: 14px;
  color: black;
}

.events .card .event-info i {
  margin-right: 5px;
}

.events .card .event-info {
  color: var(--color-red);
  font-size: 14px;
}

/* Section - about */

.about .image {
  position: relative;
}

.about .image .thumb {
  position: relative;
  display: block;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  mask-image: url("../assets/images/about/about-bg.svg");
  -webkit-mask-image: url("../assets/images/about/about-bg.svg");
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
  -webkit-transform: rotate(1.8deg);
  -ms-transform: rotate(1.8deg);
  transform: rotate(1.8deg);
}

.about .image .thumb img {
  width: 100%;
  height: 100%;
  color: #000;
}

.about .image:after {
  content: "";
  background-image: url("../assets/images/about/about-bg.svg");
  position: absolute;
  width: 90%;
  background-size: cover;
  height: 94%;
  left: 5%;
  background-position: 100% 100%;
  z-index: -1;
  top: 3%;
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
  border-radius: 10px;
}

/* SECTION - vision */
.vision {
  text-align: center;
}

.vision .card {
  padding-bottom: 50px;
  border: 3px solid transparent;
  border-radius: 10px;
  box-shadow: var(--vision-box-shadow);
  -moz-box-shadow: var(--vision-box-shadow);
  -webkit-box-shadow: var(--vision-box-shadow);
  -khtml-box-shadow: var(--vision-box-shadow);
}
/* ... */

